terraform/security_group.tf
resource "aws_security_group" "ec2_sg" {
  name        = "ots-devops-ec2-sg"
  description = "Security group for OTS DevOps EC2"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SSH"

    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"

    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"

    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins UI (admin only)"

    from_port = 8080
    to_port   = 8080
    protocol  = "tcp"

    cidr_blocks = [var.jenkins_admin_cidr]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.common_tags,
    {
      Name = "ots-devops-ec2-sg"
    }
  )
}
